--- a/job/templates/job-list.html
+++ b/job/templates/job-list.html
@@ -37,7 +37,7 @@
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                         <div class="d-flex mb-3">
                                             {% comment %} <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> {% endcomment %}
-                                            <a class="btn btn-primary" href="">Apply Now</a>
+                                            <a class="btn btn-primary" href="{% url 'job_details' job.slug %}">Apply Now</a>
                                         </div>
                                         <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: <span style="text-transform: uppercase;">{{job.apply_time}}, </span>{{job.apply_date}}</small>
                                     </div>
