--- a/job/templates/search-result.html
+++ b/job/templates/search-result.html
@@ -1,52 +1,78 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
-        <div class="container-xxl py-5 bg-dark page-header mb-5">
-            <div class="container my-5 pt-5 pb-4">
-                <h1 class="display-3 text-white mb-3 animated slideInDown">Search Job List</h1>
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb text-uppercase">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Search Result</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-        <!-- Header End -->
+{% extends 'base.html' %} {% load static %} {% block content %}
+<div class="container-xxl py-5 bg-dark page-header mb-5">
+  <div class="container my-5 pt-5 pb-4">
+    <h1 class="display-3 text-white mb-3 animated slideInDown">
+      Search Job List
+    </h1>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb text-uppercase">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Pages</a></li>
+        <li class="breadcrumb-item text-white active" aria-current="page">
+          Search Result
+        </li>
+      </ol>
+    </nav>
+  </div>
+</div>
+<!-- Header End -->
 
+<!-- Jobs Start -->
+<div class="container-xxl py-5">
+  <div class="container">
+    <h1 class="text-center mb-5">Job Listing</h1>
+    <p class="text-left mb-5">Jobs Found: {{job_count}}</p>
 
-        <!-- Jobs Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <h1 class="text-center mb-5">Job Listing</h1>
-                <p class="text-left mb-5">Jobs Found: {{job_count}} </p>
-                    
-                        {% for job in job %}
-                            <div class="job-item p-4 mb-4">
-                                <div class="row g-4">
-                                    <div class="col-sm-12 col-md-8 d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid border rounded" src="{{job.company_name.logo.url}}" alt="" style="width: 80px; height: 80px;">
-                                        <div class="text-start ps-4">
-                                            <h5 class="mb-3">{{job.position}}</h5>
-                                            <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>{{job.company_name.state}}, {{job.company_name.country}}</span>
-                                            <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>{{job.job_type}}</span>
-                                            <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>৳{{job.min_salary}} - ৳{{job.max_salary}}</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
-                                        <div class="d-flex mb-3">
-                                            {% comment %} <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> {% endcomment %}
-                                            <a class="btn btn-primary" href="{% url 'job_details' job.slug %}">Apply Now</a>
-                                        </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: <span style="text-transform: uppercase;">{{job.apply_time}}, </span>{{job.apply_date}}</small>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            
-                        {% endfor %}
-            </div>
+    {% for job in job %}
+    <div class="job-item p-4 mb-4">
+      <div class="row g-4">
+        <div class="col-sm-12 col-md-8 d-flex align-items-center">
+          <img
+            class="flex-shrink-0 img-fluid border rounded"
+            src="{{job.company_name.logo.url}}"
+            alt=""
+            style="width: 80px; height: 80px"
+          />
+          <div class="text-start ps-4">
+            <h5 class="mb-3">{{job.position}}</h5>
+            <span class="text-truncate me-3"
+              ><i class="fa fa-map-marker-alt text-primary me-2"></i
+              >{{job.company_name.state}}, {{job.company_name.country}}</span
+            >
+            <span class="text-truncate me-3"
+              ><i class="far fa-clock text-primary me-2"></i
+              >{{job.job_type}}</span
+            >
+            <span class="text-truncate me-0"
+              ><i class="far fa-money-bill-alt text-primary me-2"></i
+              >৳{{job.min_salary}} - ৳{{job.max_salary}}</span
+            >
+          </div>
         </div>
-        <!-- Jobs End -->
+        <div
+          class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"
+        >
+          <div class="d-flex mb-3">
+            {% comment %}
+            <a class="btn btn-light btn-square me-3" href=""
+              ><i class="far fa-heart text-primary"></i
+            ></a>
+            {% endcomment %}
+            <a class="btn btn-primary" href="{% url 'job_details' job.slug %}"
+              >Apply Now</a
+            >
+          </div>
+          <small class="text-truncate"
+            ><i class="far fa-calendar-alt text-primary me-2"></i>Date Line:
+            <span style="text-transform: uppercase">{{job.apply_time}}, </span
+            >{{job.apply_date}}</small
+          >
+        </div>
+      </div>
+    </div>
+
+    {% endfor %}
+  </div>
+</div>
+<!-- Jobs End -->
 {% endblock %}
