--- a/job/templates/terms_conditions.html
+++ b/job/templates/terms_conditions.html
@@ -6,7 +6,7 @@
         <div class="col-lg-10">
             <h1 class="text-center mb-5">Terms and Conditions</h1>
             <div class="mb-4">
-                <h4>Last Updated: {% now "F j, Y" %}</h4>
+                {% comment %} <h4>Last Updated: {% now "F j, Y" %}</h4> {% endcomment %}
                 <p>Welcome to JobEntry. These Terms and Conditions govern your use of our website and services. By accessing or using our platform, you agree to be bound by these Terms. If you disagree with any part of these terms, please do not use our services.</p>
             </div>
 
